# SkyNet

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: ci.yml
benches/: CMakeLists.txt  bench_http.cpp
docker/: Dockerfile  Dockerfile.backend  docker-compose.yml
docs/: benchmark.md  design.md
examples/: CMakeLists.txt  echo_server.cpp  http_server.cpp
gateway/: gateway.yaml  main.cpp
include/skynet/config/: config.h
include/skynet/core/: executor.h  task.h  thread_pool.h  timer_wheel.h
include/skynet/http/: headers.h  parser.h  request.h  response.h  router.h
include/skynet/net/: acceptor.h  io_context.h  resolver.h  socket.h  tcp_stream.h
include/skynet/proxy/: connection_pool.h  health_check.h  load_balancer.h  middleware.h  upstream.h
scripts/: format.sh
src/config/: config.cpp
src/core/: executor.cpp  task.cpp  thread_pool.cpp  timer_wheel.cpp
src/http/: headers.cpp  parser.cpp  response.cpp  router.cpp
src/net/: acceptor.cpp  io_context.cpp  resolver.cpp  socket.cpp  tcp_stream.cpp
src/proxy/: connection_pool.cpp  health_check.cpp  load_balancer.cpp  middleware.cpp  upstream.cpp
tests/: CMakeLists.txt  test_load_balancer.cpp  test_parser.cpp  test_router.cpp  test_task.cpp
